fixed overlapping columns issue

--- a/frontend/src/features/Notes/styles/MainStyles.module.css
+++ b/frontend/src/features/Notes/styles/MainStyles.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   width: 100%;
   background-color: rgb(51, 50, 50);
-  padding: 0rem .5rem 0 3.7rem;
+  padding: 0 0 0 3.2rem;
 }
 
 .noNotes {
