--- a/frontend/src/features/Notes/styles/NoteStyles.module.css
+++ b/frontend/src/features/Notes/styles/NoteStyles.module.css
@@ -1,5 +1,7 @@
 .container {
   border-radius: 5px;
+  padding: .25rem;
+  background-color: transparent !important;
 }
 
 .note {
@@ -11,7 +13,7 @@
   width: auto;
   height: auto;
   border: 1px solid rgb(116, 116, 116);
-  padding-bottom: 2rem;
+  padding-bottom: 2.5rem;
 }
 
 .modal {
